reading with jim Jason and Sven until Jnanayoga verse 1

--- a/alibindulager.tex
+++ b/alibindulager.tex
@@ -1143,7 +1143,7 @@ idānīṃ
                  \rdg[wit={X}]{\om}}\dd{}
                \app{\lem[wit={E,L,P,U2}]{kurmaṛṣiḥ}
                    \rdg[wit={X}]{\om}}\dd{}
-            \app{\lem[wit={L,P,U2}, alt={ākuñcanamudrā}]{āku:\\ñcanamudrā}
+            \app{\lem[wit={L,P,U2}, alt={ākuñcanamudrā}]{ākuñcanamudrā}
               \rdg[wit={E}]{ākuṃcamudrā}
               \rdg[wit={X}]{\om}}\dd{}
             \app{\lem[wit={E,L},alt={apānavāyuḥ}]{apānavāyuḥ}
@@ -1222,7 +1222,7 @@ murti\skp{r-va}\app{\lem[wit={ceteri}, alt={vartate}]{\skm{r-va}rtate}
     \rdg[wit={L}]{\om}
     \rdg[wit={N2}]{°saka°}}\app{\lem[wit={E,P,L,U2},alt={°vāṅmayaṃ}]{vāṅmayaṃ}
     \rdg[wit={X}]{°vāgmayaṃ}} vinābhyāsena puruṣasya manomadhye
-\app{\lem[wit={ceteri},alt={sphurati}]{sphu:\\rati}
+\app{\lem[wit={ceteri},alt={sphurati}]{sphurati}
   \rdg[wit={L}]{sphuraṃti}}/\linelabel{_34e}
       \extra{asya
         \app{\lem[type=emendation, resp=egoscr, alt={bahirānandaḥ}]{bahir\skp{-}ānandaḥ}
@@ -1350,7 +1350,7 @@ bhavati/\linelabel{_35e}
         brahmasalokatā mokṣaḥ\dd{}
         \app{\lem[type=emendation, resp=egoscr]{śuddhabhūmikā}
           \rdg[wit={U2}]{śuddhabhumikā}} tattvam\dd{}
-        ga:\\ndho viṣayaḥ\dd{}
+        gandho viṣayaḥ\dd{}
         apānavāyuḥ\dd{}
         \linelabel{_37xb}
         \app{\lem[type=emendation, resp=egoscr]{antarmātṛkāḥ}
@@ -1382,7 +1382,7 @@ bhavati/\linelabel{_35e}
 %-----------------------
 %In its middle exists extremely red glow. The adept becomes very handsome by meditation on it.       
 %-----------------------          
-ta:\\nmadhye\app{\lem[wit={P,U2}]{'tiraktavarṇaṃ}
+tanmadhye\app{\lem[wit={P,U2}]{'tiraktavarṇaṃ}
             \rdg[wit={X,E}]{atiraktavarṇaṃ}
             \rdg[wit={U1,N2}]{atiraktavarṇa°}}
 tejo vartate/
@@ -1769,7 +1769,7 @@ type=section,
        \rdg[wit={B,L,N2}]{ūrdhvalakṣam}
        \rdg[wit={D,N1}]{urdhvalakṣya}
        \rdg[wit={N2,U1}]{urdhvalakṣa}}/
-    2 adho:\\\app{\lem[wit={E,P}, alt={°lakṣyam}]{lakṣyam}
+    2 adho\app{\lem[wit={E,P}, alt={°lakṣyam}]{lakṣyam}
        \rdg[wit={B,L,U2}]{°lakṣam}
        \rdg[wit={D,N1}]{°lakṣya}
        \rdg[wit={N2}]{°lakṣa}
@@ -2227,7 +2227,7 @@ sthirā karttavyā/
     \rdg[wit={N2}]{jāgṛaddaśāyāṃ}
     \rdg[wit={N2}]{jāyadaśāyāṃ}
     \rdg[wit={B,L}]{jāgradādidaśāyāṃ}}
-\app{\lem[wit={ceteri}, alt={calanadaśāyāṃ}]{calanada:\\śāyāṃ}
+\app{\lem[wit={ceteri}, alt={calanadaśāyāṃ}]{calanadaśāyāṃ}
     \rdg[wit={N1}]{cakabadaśāyāṃ}}
 \app{\lem[wit={ceteri}]{bhojanadaśāyāṃ}
     \rdg[wit={P}]{bhojanaṃ daśāyāṃ}
@@ -3039,7 +3039,7 @@ manaḥ
   \rdg[wit={E,N1,U1}]{gamanavataḥ}
   \rdg[wit={D}]{gamanaṃ vataḥ}
   \rdg[wit={U1}]{gamavataḥ}}
-\app{\lem[wit={ceteri}, alt={sukhabhogavataḥ}]{sukha:\\bhogavataḥ}
+\app{\lem[wit={ceteri}, alt={sukhabhogavataḥ}]{sukhabhogavataḥ}
   \rdg[wit={B,L}]{sukhabogho bhavataḥ}
   \rdg[wit={U1}]{sukho bhogavataḥ}
   \rdg[wit={U2}]{sukhabhogavat}}
@@ -3139,7 +3139,7 @@ kathyate/
 %%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{alignment}[
+a\begin{alignment}[
   texts=edition[class="edition"];
   translation[class="translation"],
   ]
@@ -3257,7 +3257,7 @@ na
 %------------------------------
 %Just he is in the state of Rājayoga for whom the mind is neither in abundance nor in lack, being located in a city, a forest, an uninhabited village or a village full of people. 
 %----------------------------
-\note[type=source, labelb=127b, nosep]{Cf. YSv (PT p. 835): harṣaśokau na jātveṣāṃ nodvego lokasaṅgame | nityollāse nirākāre nirāsane nirātmani | manasā niścalo bhūtvā sadā tiṣṭhet samo 'pi ca |}
+\note[type=source, labelb=127b, nosep]{Cf. YSv (PT p. 835): harṣaśokau na jātv eṣāṃ nodvego lokasaṅgame | nityollāse nirākāre nirāsane nirātmani | manasā niścalo bhūtvā sadā tiṣṭhet samo 'pi ca |}
 %\note[type=philcomm, labelb=127c, lem={nagaramadhye \ldots}]{Corresponding prose version of the original with extensive editorial changes in \uproman{20}.\lowroman{13}-\lowroman{15}.}
 \app{\lem[wit={ceteri}]{nagaramadhye}
   \rdg[wit={E}]{rājayogaḥ nagaramadhye}
@@ -3301,9 +3301,9 @@ na bhavati/ so\app{\lem[type=emendation, resp=egoscr]{'pi}
                  depth=2, 
                  n=XVIII
                  }
-                 \label{caryayoga}
-                 \xmlhead[h18]{[XVIII. caryāyogaḥ]}
-  \begin{prose}[p18_01]
+                  \xmlhead[h18]{[XVIII. caryāyogaḥ]}
+                \label{caryayoga}
+\begin{prose}[p18_01]
     \noindent
 %----------------------------
 %idānīṃ      yogaḥ  kathyate/ \E
@@ -3336,16 +3336,15 @@ idānīṃ
 %Shapeless, unchangeable, permanent [and] unsplitable - such is the self. Such is the mind of him who remains motionless like this in the self. 
 %------------------------------
    \note[type=source, labelb=128, nosep]{Cf. YSv (PT p. 835): harṣaśokau na jātveṣāṃ nodvego lokasaṅgame | nityollāse nirākāre nirāsane nirātmani | manasā niścalo bhūtvā sadā tiṣṭhet samo 'pi ca |}
-   \note[type=philcomm, labelb=129, lem={caryāyogaḥ}]{Caryāyoga is not mentioned in YSv (PT and YK), Rāmacandra however, utilizes this passage to construe this type of yoga. Due to its brevity it must be seen as an attempt to do justice to the list of Yogas provided in the beginning (cf. PT p. 835 (\textit{harṣaśokau} \ldots \textit{samo 'pi ca} |).}
 \app{\lem[wit={B,E,L,P,U1}]{nirākāro}
   \rdg[wit={D,N1,N2}]{nirākālo}
-  \rdg[wit={U2}]{nirvikāro}
-}\app{\lem[wit={P,U2}]{'calo}
+  \rdg[wit={U2}]{nirvikāro}}
+\app{\lem[wit={X}]{nityo}
+  \rdg[wit={P,U2}]{'calo}
   \rdg[wit={B,L}]{calo}
-  \rdg[wit={X}]{nityo}
-  \rdg[wit={E}]{\om}}
-\app{\lem[wit={Y}]{nityo}
-  \rdg[wit={X}]{calo}
+  \rdg[wit={E}]{\om}
+}\app{\lem[wit={X}]{'calo}
+  \rdg[wit={Y}]{nityo}
 }\app{\lem[wit={D,E,N1,N2}]{'bhedyaḥ}
   \rdg[wit={B,L,P}]{bhedhyaḥ}
   \rdg[wit={U1}]{abhedhyaḥ}
@@ -3372,7 +3371,7 @@ idānīṃ
 \app{\lem[wit={ceteri}]{niścalaṃ}
   \rdg[wit={P,L,N2}]{niścala}}
 \app{\lem[wit={ceteri}]{tiṣṭhati}
-  \rdg[wit={U1}]{bhavati}}/
+  \rdg[wit={U1}]{bhavati}}
 %------------------------------
 %tasyātmanaḥ puṇyapāpasparśo na bhavati/ \E
 %tasyātmanaḥ puṇyapāpasparśo na bhavati  \P
@@ -3402,16 +3401,16 @@ na bhavati/
 %udakamadhye sthitasya padminī patrasya yathā  udakasparśo  na bhavati   tathaivātmani   \U1
 %udakamadhye sthitasya padminī patrasya yathodakasparśo     na bhavati// tathaivātmani   \U2
 %------------------------------
-%Just as the leave of the lotus situated in the amidst water doesn't touch the water; likewise in the self [is not touched by sin and merit].
+%Just as touch with water does not arise for the lotusleaf situated in water; likewise in the self [touch with sin and merit does not arise].
 %------------------------------
 udakamadhye sthitasya
-\app{\lem[wit={ceteri}]{padminī patrasya}
-  \rdg[wit={B,L,P}]{padmanī patrasya}
+\app{\lem[wit={ceteri}, alt={padminīpatrasya}]{padminīpatra:\\sya}
+  \rdg[wit={B,L,P}]{padmanīpatrasya}
   \rdg[wit={E}]{padmapatre}}
-\app{\lem[wit={E,P,L}]{yathodakasya sparśo}
-  \rdg[wit={B}]{yathodakasya sparśā}
+\app{\lem[wit={U2}]{yathodakasparśo}
   \rdg[wit={X}]{yathā udakasparśo}
-  \rdg[wit={U2}]{yathodakasparśo}}
+  \rdg[wit={E,P,L}]{yathodakasya sparśo}
+  \rdg[wit={B}]{yathodakasya sparśā}}
 na
 \app{\lem[wit={ceteri}]{bhavati}
   \rdg[wit={B}]{bhavatī}}
@@ -3430,13 +3429,13 @@ tathaivātmani/
 %Just as the wind wanders according to its own will in space,...  
 %------------------------------
 \note[type=source, labelb=130, nosep]{cf. YSv (PT p. 835): yathākāśe bhraman vāyur ākāśaṃ vrajate svayam | tathākāśe mano līnaṃ rājayogakriyā matā | jagatsaṃsarganirlepaṃ padmapatrajalaṃ yathā |}
-yathā\app{\lem[wit={E,P}]{kāśamadhye}
-  \rdg[wit={U2}]{'kāśamadhye}
-  \rdg[wit={ceteri}]{ākāśamadhye}}
+\app{\lem[wit={E,P}]{yathākāśamadhye}
+  \rdg[wit={U2}]{yathā 'kāśamadhye}
+  \rdg[wit={ceteri}]{yathā ākāśamadhye}}
 \app{\lem[wit={ceteri}]{pavanaḥ svechayā}
   \rdg[wit={D,N1,N2}]{pavanasvachayā}}
 \app{\lem[wit={ceteri}]{bhramati}
-  \rdg[wit={U1}]{brahmayati}}/
+  \rdg[wit={U1}]{brahmayati}}
 %------------------------------
 %tathā yasya manaḥ nirākāramadhye līnaṃ bhavati/  sa eva caryāyogaḥ// \E
 %tathā yasya manaḥ nirākāramadhye līnaṃ bhavati   sa eva caryāyogaḥ   \P
@@ -3458,7 +3457,7 @@ nirākāramadhye līnaṃ
 \app{\lem[wit={ceteri}]{bhavati}
   \rdg[wit={B}]{bhavatī}}
 sa eva
-\app{\lem[wit={ceteri}]{caryāyogaḥ}
+\app{\lem[wit={Y}]{caryāyogaḥ}
   \rdg[wit={X}]{kriyāyogaḥ}}\dd{}
 \end{prose}
 \end{edition}
@@ -3468,15 +3467,15 @@ sa eva
 Whether [one has] new clothes made of silk, or old, worn [clothes] with holes, whether [one is] smeared with sandalwood and musk, or smeared with mud - when delight and grief do not reside within the mind, it is that which is Rājayoga. When the mind is neither bored nor overwhelmed situated in a city, a forest, an uninhabited village or a village full of people, also this is Rājayoga. 
 \end{tlate}
                \ekddiv{
-                 head={[\uproman{18}. \textbf{The Yoga of conduct}]},
+                 head={[\uproman{18}. \textbf{Caryāyoga}]},
                  type=section,
                  depth=2, 
                  n=XVIII.1
                }
-               \xmlhead[h18]{[XVIII. The Yoga of conduct]}
+               \xmlhead[h18]{[XVIII. Caryāyoga]}
       \label{caryayogatrans}
      \begin{tlate}[p18_01]
-       Now, Caryāyoga is explained. Shapeless, immovable, permanent [and] unsplittable - such is the self. Whose mind remains steady in such a self, in his self there is no contact with sin and merit. Just as the leave of the lotus situated amidst water does not touch the water, likewise the self [is not touched by sin and merit]. Just as the wind wanders according to its own will in space, likewise he whose mind is absorbed into the universal spirit [wanders according to its own will in space]. Only this is Caryāyoga.\footnote{Due to the absence of the term \textit{cāryayoga} in Rāmacandra's sources and the brevity of the section, it seems that he added his version of Caryāyoga to simply do justice to the list. However, Rāmacandra emphasizes the cultivation of detachment towards sin (\textit{pāpa}) and merit (\textit{puṇya}). Parallels can be identified with the concept of Caryāyoga as presented in the \citetitle{yogacandrika} (Ed. pp. 2, 52-53, 100-101, 150). Here, it appears that Caryāyoga is a spiritual practice or discipline that aims to purify the mind. Nārāyaṇatīrtha introduces Caryāyoga in the context of Yogasūtra 1.33, Ed. p. 52 (\textit{maitrīkaruṇāmuditopekṣāṇāṃ sukhaduḥkhapuṇyāpuṇyaviṣayāṇāṃ bhāvanātaś cittaprasādanam}). According to Nārāyaṇatīrtha's commentary, the practice of it involves cultivating specific mental attitudes, such as \textit{maitrī} (loving-kindness), \textit{karuṇā} (compassion), \textit{muditā} (sympathetic joy), and \textit{upekṣā} (equanimity), towards different objects or situations, such as happiness, suffering, merit, and demerit. The practice of Caryāyoga is said to lead to eradicating mental impurities and attaining a calm and tranquil state of mind. Nārāyaṇatīrtha characterizes the practice as the renunciation of worldly attachments and desires and the performance of selfless actions or Karmayoga. Nārayaṇatīrtha states that Caryāyoga is the "primary discipline of detachment (\textit{vairāgya})," which suggests that it emphasizes the cultivation of detachment or dispassion towards worldly objects and desires as a means of achieving spiritual liberation. Within \citetitle{sarvangayoga} (2.40-51, Ed. pp. 96-98) Sundardās describes Cārcāyog as a type of Bhaktiyog which is \textit{bhakti} towards unmanifest consciousness (\textit{avyakta puruṣa}) in delightful devotion. The practice results in a beautiful inner being (50-51). He first describes the unmanifest consciousness (\textit{avyakta puruṣa}) as being formless and eternal and so on (40), as beginningless and endless, and so on (41). Next, Sundardās describes the various layers of creation emanating from \textit{oṃ} (42-45). He says the unmanifest consciousness illuminates every corner of existence (46), being the inner knower of all (47). Then, Sundardās expresses the importance of deep awe towards the infinite, divine, all-knowing and incomprehensible (48-49) unmanifest consciousness, which is the critical component of his Cārcāyog type of \textit{bhakti}.}
+      Now, Caryāyoga is explained.\footnote{Caryāyoga is not mentioned in YSv (PT and YK). The term is absent in the text and the initial list of fifteen Yogas. Rāmacandra, however, utilizes a passage that in YSv still belongs to the section on Rājayoga to construe this new type of Yoga. Due to its brevity, it might be an attempt to do justice to the list of Yogas provided in the beginning (cf. PT p. 835 (\textit{harṣaśokau} \ldots \textit{samo 'pi ca} |)). The passage's content does not explain why Rāmacandra uses the term \textit{caryā°} to specify this type of Yoga. The introduction of Caryāyoga into the list of fifteen yogas is based on the respective \textit{pāda} among the four \textit{pāda}s of the śaivaite Āgamas, which bear the same names as the first four Yogas in Rāmacandra's list of fifteen Yogas (\textit{kriyā}-, \textit{jñāna}-, \textit{caryā}- and \textit{yogapāda}). Perhaps, in this context, the concept of \textit{caryā°} = √\textit{car} + \textit{kṛt}-suffix \textit{-yā} f. might express the action, which refers to the meaning ``wandering, roaming'' of the verbal root √\textit{car}, which Rāmacandra brings up in his description. There is no connection to ritual conduct/discipline of śaivite practices. Since this is mere speculation, I refrain from attempting to translate it.} Formless, permanent, immovable [and] unsplittable - such is the self. For whose mind remains steady in such a self, his self does not come into contact with sin and merit. Just as contact with water does not arise for the lotus leaf situated in water, likewise in the [case of the] self. When the mind is absorbed into the formless,\footnote{The term \textit{nirākāra} was already used in the second sentence of this section as an adjective qualifying the self (\textit{ātman}). Here, it is a noun and probably synonymous with the self.} in the same way as the wind wanders according to its own will in space, only that is Caryāyoga.\footnote{Parallels to Rāmacandra's innovative Caryāyoga can be identified in the texts with similar taxonomies. In \citetitle{yogacandrika} (ed. pp. 2, 52-53, 100-101, 150) Nārāyaṇatīrtha presents Caryāyoga in the context of Yogasūtra 1.33. According to Nārāyaṇatīrtha's commentary, the practice of this involves the cultivation of specific mental attitudes, such as \textit{maitrī} (loving-kindness), \textit{karuṇā} (compassion), \textit{muditā} (compassionate joy) and \textit{upekṣā} (equanimity), towards various objects or situations, such as happiness, suffering, merit and demerit. Sundardās, in his \citetitle{sarvangayoga} (2.40-51, ed. pp. 96-98), describes the similar sounding Cārcāyog as a type of \textit{bhaktiyog} that is \textit{bhakti} towards the unmanifest consciousness (\textit{avyakta puruṣa}) in rapturous devotion. According to Sundardās, the unmanifest consciousness (\textit{avyakta puruṣa}) is formless, eternal, etc. (40). However, in Sanskrit and \textit{brājbhāṣā} the term means ``discussion''. It has nothing to do with \textit{caryā}, and we thus must assume that both types are unrelated. A detailed discussion of Caryāyoga can be examined on p.\pageref{caryayogaintro}.} 
        \flushpage
      \end{tlate}
    \end{translation}
@@ -3510,6 +3509,321 @@ Whether [one has] new clothes made of silk, or old, worn [clothes] with holes, w
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%PAGEBREAK%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%PAGEBREAK%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%PAGEBREAK%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{alignment}[
+  texts=edition[class="edition"];
+  translation[class="translation"],
+  ]
+  \begin{edition}
+%------------------------------
+%srehapuṇyaphalaṃ   bīje vistaro yaṃ svabhāvataḥ/  tathāsau   nirmalo  nityo nirvikāro niraṃjanaḥ//4// \E
+%snehapuṣpaphalaṃ   bīje vistāro yaṃ svabhāvataḥ   tāthāpasau nirmalau nityo nirvikāro niraṃjanaḥ     \P   %%7641.jpg Z.1
+%snehe puṣpaphala---bīja-vistāro ya  svabhāvatāḥ   yāthāsau   nirmalo  nityo nirvikāro niraṃjanaḥ//    \B
+%snehe puṣpaphala---bīja-vistāro ya  svabhāvatāḥ// tāthāsau   nirmalo  nityo nirvikāro niraṃjanaḥ//    \L
+%snehapuṣpaphalaṃ   bīje vistārā yaṃ svabhāvataḥ/  tathāsau   nirmalo  nityo nirvikāro niraṃjanaḥ//5// \N1
+%snehapuṣpaphalaṃ   bīje vistārā yasya  bhāvataḥ// tathāsau   nirmalo  nityo nirvikāro niraṃjanaḥ//5// \D
+%snehapuṣpaphalaṃ   vīje vistāro yaṃ svabhāvataḥ// tathāsau   nirmalo  nityo nirvikāro niraṃjanaḥ//5// \N2
+%snehapuṣpaṃ phalaṃ bīje vistāro yaḥ svabhāvataḥ   tathāsau   nirmalo  nityo nirvikāro niraṃjanaḥ 5 \U1  %%%%274.jpg
+%snehapuṣpaphalaṃ   bīje vistāro yaṃ svabhāvataḥ// tathāsau   nirmalo  nityo nirvikāro niraṃjanaḥ// 5  \U2 %%%first Śloka in this series that is numbered in U2 
+%------------------------------
+%Aufgrund seines inhärenten Wesens ist dieser Ast mit seinen Zweigen, welcher die Frucht der Blüte der Liebe ist, im Samen.
+%Gewiss, ist jenes rein, ewig, unveränderlich und makellos. 
+%------------------------------
+%By virtue of its inherent nature, this branch with its branches, which is the fruit of the flower of love, is in the seed.
+%Certainly, that is pure, eternal, unchanging and immaculate.
+%------------------------------
+    \begin{tlg}[21_5]
+\noindent
+      \tl{\note[type=source, labelb=138, labele=_138e, nosep]{ \approx  YSv (PT p. 836): snehapuṣpaphalair vījair vistāro 'yaṃ svabhāvataḥ | tathāsau nirmalo nityo nirvikāro nirañjanaḥ |}
+    \app{\lem[wit={D,N1,N2,P,U2}]{snehapuṣpaphalaṃ}
+  \rdg[wit={B,L}]{snehe puṣpaphala°}
+  \rdg[wit={U1}]{snehapuṣpaṃ phala}
+  \rdg[wit={E}]{srehapuṇyaphalaṃ}}
+\app{\lem[wit={ceteri}]{bīje}
+  \rdg[wit={B,L}]{bīja}}
+\app{\lem[wit={ceteri}]{vistāro}
+  \rdg[wit={D,N1}]{vistārā}
+}\app{\lem[wit={E,P,N1,N2,U2}]{'yaṃ}
+  \rdg[wit={B,L}]{ya}
+  \rdg[wit={U1}]{yaḥ}
+  \rdg[wit={D}]{yasya}}
+\app{\lem[wit={ceteri}]{svabhāvataḥ}
+  \rdg[wit={B,L}]{svabhāvatāḥ}
+  \rdg[wit={D}]{bhāvataḥ}}/}\\
+\tl{\app{\lem[wit={ceteri}]{tathāsau}
+    \rdg[wit={B}]{yathāsau}
+    \rdg[wit={P}]{tathāpasau}}
+  \app{\lem[wit={ceteri}]{nirmalo}
+    \rdg[wit={P}]{nirmalau}}
+nityo nirvikāro nirañjanaḥ\dd{} \begin{otherlanguage}{english}\uproman{21}.5\end{otherlanguage} \dd{}} \linelabel{_138e}
+\end{tlg}
+%------------------------------
+%eko  nekaḥ  svayaṃbhūś ca dhāmnā ca    bahudhā sthitaḥ/   paṃcatattvamanobuddhi-māyāhaṃkāravikriyāḥ //5//   \E
+%eko  nekaḥ  svayaṃbhūś ca svadhāmnā    bahudhā sthitāḥ    paṃcatatvamanobuddhir māyāhaṃkāravikriyāḥ   6     \P
+%eko  neka   svayaṃbhūś ca dhāmnāya     bahudhā sthitaḥ//  paṃcatatvamanobuddhi--māyāhaṃkāravikriyā  //      \B
+%eko  nekaḥ  svayaṃbhūś ca svadhābhāva  bahudhā sthitāḥ//  paṃcatatvamanobuddhi--māyāhaṃkāravikriyā  //      \L
+%eko  nekaḥ  svayaṃbhuś ca svayāṃmnā    bahudhā sthitaḥ/   paṃcatatvamanobuddhir māyāhaṃkāravikriyā  //6//   \N1
+%eko  nekaḥ  svayaṃbhaś ca svadhā...ṣ   bahudhā sthitāḥ//  paṃcatatvamanobuddhir māyāhaṃkāravikriyā  //6//   \D
+%eko  neka   svayaṃbhūś ca svadhāmnāva  bahudhā sthitaḥ//  paṃcatatvamanobuddhir māyāhaṃkāravikriyā  //6//   \N2
+%yeko naika/ svayaṃbhūtyā  svabhāvā     bahudhā sthitaḥ    paṃcatatvamanobuddhir māyāhaṃkāravikriyāḥ   6     \U1
+%eko  naiko  svayaṃbhūś ca svadhāmnā    bahudhā sthitaḥ//  paṃcatatvamanobuddhir māyāhaṃkāravikriyā  //6//   \U2
+%------------------------------
+%One, not one, self-existing by it's own power, abiding in multiplicity, as five [gross] elements (\textit{tattva}), thinking mind (\textit{manas}), intellect (\textit{buddhi}), illusion (\textit{māya}), individuation (\textit{ahaṃkāra}), and modifications (\textit{vikriyā}). 
+%------------------------------
+\begin{tlg}[21_6]
+  \noindent
+\note[type=source, labelb=139, labele=_139e, nosep]{ \approx  YSv (PT p. 836): eko 'nekaḥ khayaṃ bhūyān sādhanād bahudhā sthitaḥ | pañcatattvamayo buddhimāyāhaṅkāravikriyaḥ |}
+  \tl{
+\app{\lem[wit={ceteri}]{eko}
+  \rdg[wit={U1}]{yeko}}
+\app{\lem[type=emendation, resp=egoscr]{naikaḥ}
+   \rdg[wit={ceteri}]{nekaḥ}
+   \rdg[wit={U1}]{naika}
+  \rdg[wit={U2}]{naiko}
+  \rdg[wit={B,N2}]{neka}}
+\app{\lem[wit={ceteri},alt={svayaṃbhūś ca}]{svayaṃbhūś\skp{-}ca}
+  \rdg[wit={U1}]{svayaṃbhūtyā}}
+\app{\lem[wit={P,U2}]{svadhāmnā}
+  \rdg[wit={E}]{dhāmnā ca}
+  \rdg[wit={B}]{dhāmnāya}
+  \rdg[wit={L}]{svadhābhāva}
+  \rdg[wit={N1}]{svayāṃmnā}
+  \rdg[wit={D}]{svadhā..ṣa}
+  \rdg[wit={N2}]{svadhāmnāva}
+  \rdg[wit={U1}]{svabhāvā}}
+bahudhā
+\app{\lem[wit={D,L,P}]{sthitāḥ}
+  \rdg[wit={ceteri}]{sthitaḥ}}/}\\
+\tl{pañcatattvamano\app{\lem[wit={E,P,L},alt={°buddhi°}]{buddhi}
+    \rdg[wit={ceteri}]{°buddhir}
+  }māyāhaṃkāra\app{\lem[wit={E,P,U1},alt={°vikriyāḥ}]{vikriyāḥ}
+    \rdg[wit={ceteri},alt={°vikriyā}]{vikriyā}}\dd{} \begin{otherlanguage}{english}\uproman{21}.6\end{otherlanguage} \dd{}} \linelabel{_139e}
+\end{tlg}
+%------------------------------ 
+%evaṃ daśavidhaṃ viśvaṃ lokālokasavistaram/   eka  eva na cānyo sti yo jānāti sa tattvavit//6// \E
+%evaṃ daśavidhaṃ viśvaṃ lokālokasavistaraṃ    eka  eva na cānyo sti yo jānāti sa tatvavit 6 \P
+%evaṃ daśavidhā  viśvaṃ lokālokasavistaraṃ//  eka  eva na cānyā sti yo jānāti sa tatvavit// \B
+%evaṃ daśavidhā  viśvaṃ lokālokasavistaraṃ//  eka  eva na cānyo sti yo jānāti sa tatvavit// \L
+%evaṃ daśavidhaṃ viśvaṃ lokālokasavistarāṃ/   eka  eva na cānyo sti yo nānāti sa tatvavit//7// \N1
+%evaṃ daśavidhaṃ viśvaṃ lokālokasavistaraṃ//  eka  eva na cānyo sti yo jānāti sa tatvavit//7// \D
+%evaṃ daśavidhā  viśvaṃ lokālokasavistaraṃ//  eka  eva na cānyo sti yo jānāti sa tatvavit//7// \N2
+%evaṃ daśavidha--viśvaṃ lokālokasavistaraṃ    eka yeva na cānyo sti yo jānāti sa tatvavit 7 \U1
+%evaṃ daśavidhaṃ viśvaṃ lokāloke savistaraṃ// ekam eva na cānyo sti yo jānāti sa tatvavit//7// \U2 %%%409.jpg 
+%------------------------------
+%Auf diese Weise durchdringen die zehn Variationen die Welt und die Nicht-Welt im vollen Umfang.  
+%Nur das Eine ist und nicht etwas anderes: Wer das weiß ist ein Kenner der Realität.  
+%------------------------------
+%In this way, the ten variations fully permeate the world and the non-world.
+%Only one thing is and not something else: Whoever knows this is a connoisseur of reality.
+%------------------------------
+\begin{tlg}[21_7]
+  \noindent
+\note[type=source, labelb=140, labele=_140e, nosep]{ \approx  YSv (PT p. 836): evaṃ bahuvidhaṃ viśvaṃ lokālokasuvistaram | ekam eva na cānvo 'sti yo jānāti sa tattvavit |}
+   \tl{
+     evaṃ
+     \app{\lem[wit={D,E,P,N1,U2}]{daśavidhaṃ viśvaṃ}
+       \rdg[wit={B,L,N2}]{daśavidhā viśvaṃ}
+       \rdg[wit={U1}]{daśavidhaviśvaṃ}}
+     \app{\lem[type=emendation, resp=egoscr]{lokālokasuvistaram}
+       \rdg[wit={B,D,E,L,P,N2,U1}]{lokālokasavistaram}  
+       \rdg[wit={N1}]{lokālokasavistarāṃ}
+       \rdg[wit={U2}]{lokāloke savistaraṃ}}/}\\
+   \tl{\app{\lem[wit={ceteri}]{eka}
+       \rdg[wit={U2}]{ekam}}
+       \app{\lem[wit={ceteri}]{eva}
+         \rdg[wit={U1}]{yeva}}
+       na cānyo'sti yo jānāti sa tattvavit\dd{} \begin{otherlanguage}{english}\uproman{21}.7\end{otherlanguage} \dd{}} \linelabel{_140e}
+\vspace{5mm} %5mm vertical space 
+   \end{tlg}
+    \begin{prose}[p21_02]     
+%------------------------------
+%pṛthvīvanaspatiparvatādisthārarūpaḥ         saṃsāra---manuṣyahastyaśvapakṣītyādiko    jaṃgamarūpaḥ   saṃsāraḥ// \E
+%pṛthvīvanaśpatiparvatādisthāvararūpaḥ       saṃsāraḥ  manuṣyahastyaś ca pakṣītyādiko  jaṃgamarūpaḥ   saṃsāraḥ \P
+%pṛthvīvanaspatīparvatādisthāvararūpā        saṃsāraḥ/ manuṣyahasteśvapakṣītyādiko     jaṃgamarūpaḥ   saṃsāraḥ// \B
+%pṛthvīvanaspatiparvatādisthāvararūpā        saṃsāraḥ  manuṣyahasteśvapakṣītyādiko     jaṃgamarūpā    saṃsāraḥ// \L
+%pṛthvīvanaspatīparvvate tyādisthāvararūpaḥ  saṃsāraḥ  manuṣyahastīaśvapakṣītyādiko    jaṃgamarūpaḥ   saṃsāraḥ// \N1
+%pṛthvīvanaspatīparvato tyādisthāṃvararūpaḥ  saṃsāraḥ  manuṣyahastīaśvapakṣītyādiko    jaṃgamaḥ rūpaḥ saṃsāraḥ// \D
+%pṛthvīvanaspatiparvate 'thyādisthāvararūpa  saṃsāraḥ  manuṣyahastipakṣītyādiko        jaṃgamarūpaḥ   saṃsāraḥ// \N2
+%pṛthivīvanaspatīparvate iyādisthāvararūpaḥ  saṃsāra---manuṣyahastiasvapakṣītyādiko    jagadrūpaḥ     saṃsāro \U1
+%pṛthvīvanaspatiparvatādisthāvararūpaḥ       saṃsāraḥ//manuṣyahasttyaś ca pakṣītyādiko jaṃgamarūpaḥ   saṃsāraḥ//8// \U2
+%------------------------------
+%The mundane existance (\textit{saṃsāra}) exists in the form of stationary [existances] such as earth, tree mountains and so on. The mundane existance (\textit{saṃsāra}) [also] exists in the form of the mobile [existances] such as humans, animals, birds and so on.
+%------------------------------
+\note[type=source, labelb=141, labele=_141e, nosep]{cf. YSv (PT p. 832): sthāvarāḥ parvatādyā hi jaṅgamāḥ khecarādayaḥ | jaṅgamasthāvarākāraḥ saṃsāraḥ syāt sa īśvaraḥ |}
+\app{\lem[wit={ceteri},alt={pṛthvī°}]{pṛthvī}
+        \rdg[wit={U1}]{pṛthivī°}
+      }\app{\lem[wit={E,N2,U2},alt={°vanaspati°}]{vanaspati}
+        \rdg[wit={P}]{vanaśpati}
+        \rdg[wit={B,D,L,N1,U1}]{vanaspatī°}
+      }\app{\lem[wit={B,L,P,U2}, alt={°parvatādisthāvara°}]{parvatādisthāvara}
+        \rdg[wit={E}]{°parvatādisthāra°}
+        \rdg[wit={D}]{°parvato tyādisthāṃvara°}
+        \rdg[wit={N1}]{°parvvate tyādisthāvara°}
+        \rdg[wit={N2}]{°parvate 'thyādisthāvara°}
+        \rdg[wit={U1}]{°parvate iyādisthāvara°}
+      }\app{\lem[wit={ceteri}]{rūpaḥ}
+        \rdg[wit={B,L}]{rūpā}
+        \rdg[wit={N2}]{rūpa}}
+      \app{\lem[wit={ceteri}]{saṃsāraḥ}
+        \rdg[wit={E,U1}]{saṃsāra°}}/
+      manuṣya\app{\lem[wit={B,L},alt={°hasteśvapakṣīty ādiko}]{hasteśvapakṣīty\skp{-}ādiko}
+          \rdg[wit={E}]{°hasty aśvapakṣīty ādiko}
+          \rdg[wit={D,N1}]{°hastīaśvapakṣīty ādiko}
+          \rdg[wit={N2}]{°hastipakṣīty ādiko}
+          \rdg[wit={U1}]{°hastiasvapakṣīty ādiko}
+          \rdg[wit={U2}]{°hasttyaś ca pakṣīty ādiko}}
+        \app{\lem[wit={ceteri}]{jaṃgamarūpaḥ}
+          \rdg[wit={D}]{jaṃgamaḥ rūpaḥ}
+          \rdg[wit={L}]{°rūpā}
+          \rdg[wit={U1}]{jagad°}}
+        \app{\lem[wit={ceteri}]{saṃsāraḥ}
+          \rdg[wit={U1}]{saṃsāro}}/\linelabel{_141e}
+%------------
+%atha ca   yo  dṛṣṭiviṣayaḥ  sa dṛśya  ucyate/  yo dṛṣṭyā na vīkṣyate sa adṛśya ity  ucyate/ \E
+%atha ca   yo  dṛṣṭiviṣayaḥ  sa dṛśya  ucyate   yo dṛṣṭyā na vīkṣyate sa adṛśya ity  ucyate  %%%7641.jog
+%atha ca// yo  daṣṭiviṣayaḥ  sa dṛśya  ucyate// yo dṛṣṭyā na vīkṣyate sa adṛśya ty   ucyate// \B
+%atha ca   yo ddṛṣṭiviṣayaḥ  sa dṛśya  ucyate// yo dṛṣṭyā na vīkṣyate sa adṛśye ty   ucyate... \L
+%atha ca   ya ddṛṣṭiviṣayaḥ  sa dṛśyad ucyate   yo dṛṣṭyā na vīkṣyate sa adṛśya ity  ucyate// \N1
+%atha vā   ya dārṣṭiviṣayaḥ  sa dṛśya  ucyate/  yo dṛṣṭyā na vīkṣyate sa adṛśya ity  ucyate// \D
+%atha ca   ya  drṣṭiviṣayaḥ  sa dṛśya  ucyate/  yo dyā    na vīkṣyate sa adṛśya śaty ucyate/ \N2
+%atha ca   yaḥ drṣṭiviṣayaḥ  sa dṛśy---ucyate   yo dṛṣṭvā na vīkṣyate sa adṛśya ity  ucyate \U1
+%atha ca   yo  dṛṣṭiviṣayaḥ  sa dṛśya  ucyate// yo dṛṣṭyā na vīkṣyate sa adṛśya ity  ucyate// \U2
+%------------------------------
+%Now, that which is the object of sight is called the seen. That which is not seen by sight is called the unseen.
+%------------------------------
+\note[type=source, labelb=142, labele=_142e, nosep]{cf. YSv (PT p. 836): svabhāvalīlayā bhāti śūnye 'sau śūnyabuddhitaḥ | yad dṛṣṭaṃ viṣayaṃ vastu tad dṛśyam iti kathyate | yo dṛṣṭātītaḥ so 'dṛśyas tadā dṛṣṭaṃ hi manyate | svatanūbhedam evan tu saṃsāraṃ duḥkhasaṅkulam |}
+atha
+      \app{\lem[wit={ceteri}]{ca}
+        \rdg[wit={D}]{vā}}
+      \app{\lem[wit={ceteri}]{yo}
+        \rdg[wit={U1}]{yaḥ}
+        \rdg[wit={D,N1,N2}]{ya}}
+      \app{\lem[wit={ceteri}]{dṛṣṭi}
+        \rdg[wit={L,N1}]{ddṛṣṭi}
+        \rdg[wit={B}]{daṣṭi}
+        \rdg[wit={D}]{dārṣṭi}
+}viṣayaḥ sa
+\app{\lem[wit={ceteri}]{dṛśya}
+  \rdg[wit={N1}]{dṛśyad}
+  \rdg[wit={U1}]{dṛṣy°}}
+ucyate/
+yo
+\app{\lem[wit={ceteri}]{dṛṣṭyā}
+  \rdg[wit={N2}]{dyā}}
+na vīkṣyate sa adṛṣya
+\app{\lem[wit={ceteri},alt={ity}]{i\skp{ty-u}}
+  \rdg[wit={B,L}]{ty}
+  \rdg[wit={N2}]{śaty}
+}\skm{ty-u}cyate/
+%------------------------------
+%evaṃ saṃsārasya svātmano  bhedaṃ dūrīkṛty---aikam eva darśanaṃ sa eva jñānayogaḥ/   \E
+%evaṃ saṃsāra----svātmano  bhedaṃ dūrīkṛtya  aikyena   darśanaṃ        jñānayogaḥ    \P
+%evaṃ saṃsārasya svātmano  bheda--dūrīkṛtya  aikyona   darśanaṃ        jñānayogaḥ/   \B
+%evaṃ saṃsāra----svātmano  bhedaṃ dūrīkṛtya  aikyona   darśanaṃ        jñānayogaḥ... \L
+%evaṃ saṃsārasya svātmanaḥ bhedāṃ dūrīkṛtya  ekyena    darśanaṃ        jñānayogaḥ//  \N1
+%evaṃ saṃsārasya svātmanaḥ bhedāṃ dūrīkṛtya  ekyena    darśanaṃ        jñānayogaḥ/   \D
+%evaṃ saṃsārasya svātmanaḥ bhedaṃ dūrīkṛtya  ekena     darśanaṃ        jñānayogaḥ/   \N2
+%evaṃ saṃsārasya svātmanaḥ bhedaṃ dūrīkṛtya  ekānta    darśanaṃ        jñānayogaḥ    \U1
+%evaṃ saṃsāra....svātmanoḥ bhedaṃ dūrīkṛtyaṃ ekye?     darśanaṃ        jñānayoga     \U2
+%------------------------------
+%In this way, the realisation of unity (\textit{aikyena darśanam}) by eliminating the differentiation of the self from the mundane existance is truly Jnānayoga.
+%------------------------------
+evaṃ
+       \app{\lem[wit={ceteri}]{saṃsārasya}
+         \rdg[wit={P,L,U2}]{saṃsāra°}}
+       \app{\lem[wit={B,E,L,P}]{svātmano}
+         \rdg[wit={X}]{svātmanaḥ}
+         \rdg[wit={U2}]{svātmanoḥ}}
+       \app{\lem[wit={ceteri}]{bhedaṃ}
+         \rdg[wit={B}]{bheda}
+         \rdg[wit={D,N1}]{bhedāṃ}}
+dūrī\app{\lem[wit={U2},alt={°kṛtyaṃ}]{kṛtyaṃ}
+  \rdg[wit={ceteri}]{°kṛtya}
+  \rdg[wit={E}]{°kṛty}}
+\app{\lem[wit={P}]{aikyena}
+  \rdg[wit={E}]{aikam eva}
+  \rdg[wit={B,L,P}]{aikyona}
+  \rdg[wit={D,N1}]{ekyena}
+  \rdg[wit={N2}]{ekena}
+  \rdg[wit={U1}]{ekānta}
+  \rdg[wit={U2}]{ekye}}
+darśanaṃ
+\app{\lem[wit={E}]{sa eva}
+  \rdg[wit={ceteri}]{\om}}
+\app{\lem[wit={ceteri}]{jñānayogaḥ}
+  \rdg[wit={U2}]{jñānayoga}}/ 
+%------------------------------
+%tasya         kāraṇāt kālaḥ śarīranāśaṃ na karoti/ \E
+%tasya         kāraṇāt kālaḥ śarīranāśaṃ na karoti/ \P
+%tasya         karaṇāt kālaḥ śarīranāśaṃ na karoti// \B
+%tasya         karaṇāt kālaḥ śarīranāśaṃ na karoti... \L
+%tasya         karaṇāt kālaḥ śarīranāśaṃ na karoti// \N1
+%tasya         karaṇāt kālaḥ śarīranāśaṃ na karoti// \D
+%tasya         karaṇāt kālaḥ śarīranāśaṃ    karoti/ \N2
+%gatasya dhyānakaraṇāt kālaḥ śarīranāśaṃ na karoti 8 \U1
+%tasya         karaṇāt kālaśarīranāśanaṃ    karoti// \U2
+%------------------------------
+%Due to this, time does not bring about the destruction of the body.
+%------------------------------
+\app{\lem[wit={ceteri}]{tasya}
+  \rdg[wit={U1}]{gatasya}}
+\app{\lem[wit={ceteri}, alt={kāraṇāt}]{kāraṇā\skp{t-kā}}
+  \rdg[wit={U1}]{dhyānakaraṇāt}
+}\app{\lem[wit={ceteri}, alt={kālaḥ}]{\skm{t-kā}laḥ}
+  \rdg[wit={U1}]{kāla°}}
+śarīranāśaṃ
+\app{\lem[wit={ceteri}]{na}
+  \rdg[wit={N2,U2}]{\om}}
+karoti\dd{}\linelabel{_142e}
+\label{jnanayogaend}
+\end{prose}
+  \end{edition}
+  \begin{translation}
+    \begin{tlate}[21_5]
+      \paragraph{\uproman{21}.5} By virtue of its inherent nature, the branch of a tree with its new shoots (\textit{vistāra}), being the fruit of the flower of love, is in the seed. Certainly, that [the inherent nature?] is pure, eternal, unchanging, and immaculate.
+    \end{tlate}
+    \begin{tlate}[21_6]
+     \paragraph{\uproman{21}.6} One, not one, self-existing by its own power, abiding in multiplicity, as five [gross] elements (\textit{tattva})\footnote{The term \textit{pañcatattva} refers to the five gross elements. The concept of five gross elements emerging from a supreme god is found in tantric works, cf. e.g. \citetitle{sivasvarodaya} 6-8 (\textit{nirañjano nirākara eko devo maheśvaraḥ} | \textit{tasmād ākāśam utpannam ākāśād vāyusambhavaḥ} || 6 || \textit{vayos tejas tataś cāpas tataḥ pṛthvī samudbhavaḥ} | \textit{etāni pañcatattvāni vistīrṇāni ca pañcadhā} || 7 || \textit{tebhyo brahmāṇḍam utpannaṃ tair eva parivartate} | \textit{vilīyate ca tatraiva tatraiva ramate punaḥ} || 8 ||) 
+       ``Faultless and without a body is the one god, the great supreme ruler. From him, the ether element (\textit{ākāśa}) originated, and from the ether element, the air element came into existence (6). From the air element, the fire element and from the fire element, the water element and from the water element, the earth element. These five elements unfold in a fivefold manner (7). From these five elements, the universe has arisen, evolves and dissolves. [Then] right here, right there [it] enjoys again (8).'' In \citetitle{kumbhaka} 122, a technique of breath retention is dedicated to the five \textit{tattva}s (\textit{tatvādau pūreyed vāyuṃ tat tatvānte virecayet} | \textit{tatvakumbhaḥ sa gaditaḥ pañcadhā tatvabhedataḥ} || 122 ||) ``One shall inhale before [the rise] of a particular \textit{tattva} and exhale at the end of that \textit{tattva}. This is called \textit{tattvakumbhaka} being five-fold according to the five divisions of \textit{tattva}. The \citetitle{sivasvarodaya} discusses the rise, duration, properties and application of the \textit{tattva}s in greater detail. An overview of this can be seen in \citeauthor[2021: Appendix-\lowroman{3}]{kumbhaka}.} thinking mind (\textit{manas}), intellect (\textit{buddhi}), illusion (\textit{māya}), individuation (\textit{ahaṃkāra}), and modifications (\textit{vikriyā}).\begin{buber}[f21_1]\footnote{In the tantric traditions of Śaivism tenfold \textit{tattva}-systems existed \ldots.}\end{buber}
+   \end{tlate}
+   \begin{tlate}[21_7]
+     \paragraph{\uproman{21}.7} Thus, the tenfold world is the great extent of the world and non-world. There is only one. There nothing else. One who knows this is a knower of the truth.
+     \\\\
+     \end{tlate}
+\begin{tlate}[p21_02]
+  Transmigration (\textit{saṃsāra}) exists in the form of stationary [existances] such as earth, trees, mountains and so on. Transmigration (\textit{saṃsāra}) [also] exists in the form of the mobile [existances] such as humans, animals, birds and so on. Now, that which is the object of sight is called the seen. That which is not seen by sight is called the unseen. In this way, the removal of the distinction of the own self from transmigration is to be done by means of unity, only this perception is Jñānayoga. From the execution of this, time does not bring about the destruction of the body.
+ \flushpage
+    \end{tlate}
+  \end{translation}
+\end{alignment}
+\pagebreak %after pp.43-44
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
