--- a/bindu.bib
+++ b/bindu.bib
@@ -34,9 +34,48 @@
  keywords={printed},
 }
 
+@incollection{ganesan2016saiva,
+  author = {Ganesan, T.},
+  title = {{Śaiva Āgamas: The Four Pādas and Thirty-six Tattvas}},
+  booktitle = {Brill’s Encyclopedia of Hinduism Online},
+  editor = {Knut A. Jacobsen and Helene Basu and Angelika Malinar and Vasudha Narayanan},
+  publisher = {Brill},
+  year = {2016},
+  url = {http://dx.doi.org/10.1163/2212-5019_BEH_COM_000416},
+  note = {Consulted online on 05 February 2024},
+  doi = {10.1163/2212-5019_BEH_COM_000416},
+  keywords={seclit}, 
+}
+
+@book{mrgendragama,
+ title={Mṛgendrāgama (Kriyāpada and Caryāpada)}, 
+ subtitle={with the Comm. by Bhaṭṭa Nārāyaṇa Kaṇṭha}, 
+ editor={Bhatt, N. R.}, 
+ publisher={Institut Français de Pondichéry}, 
+ year={1962},
+ keywords={printsource}, 
+}
+
+
+@book{mrgendragamabrunner,
+  title = {Mṛgendrāgama. Section des rites et section du comportement Avec la Vṛtti de Bhaṭṭanārāyaṇakanṭha},
+  author = {Mṛgendrāgama and Brunner-Lachaux, Hélène},
+  year = {1985},
+  publisher = {Institut Français de Pondichéry},
+  series = {Collection Indologie},
+  location = {Pondichéry},
+  note = {Publié avec le concours du CNRS},
+  pages = {564 p.},
+  url = {https://doi.org/10.4000/books.ifp.1809},
+  isbn = {979-10-365-4446-0},
+  doi = {10.4000/books.ifp.1809},
+  keywords={seclit}, 
+}
+
 ﻿@book{brunner1963, 
  title={Somaśambhupaddhati},
  subtitle={Texte, trad. et notes par Hélène Brunner-Lachaux. 4 parties.}, 
+ editor={Brunner, Hélène}, 
  year={1963},
  series={Publications de l’Institut français d’Indologie; Publications du Départment d’Indologie.}, 
  volume={25},
@@ -272,6 +311,18 @@ address={Lonavla},
   language = {English},
   note = {A supplement by the author appeared in the same series (Bd. II, Anhang II) with title: The Roots, Verb-Forms, and Primary Derivatives of the Sanskrit Language. Leipzig, 1885 (xiii, [1], 250 p.)},
   url = {https://archive.org/details/sanskritgrammari00whituoft},
+}
+
+@incollection{brunner1994place,
+  author    = {Brunner, Hélène},
+  title     = {The Place of Yoga in the Śaivāgamas},
+  booktitle = {Pandit N.R. Bhatt Felicitation Volume},
+  editor    = {Filliozat, P.-S. and Narang, S.P. and Bhatta, C.P.},
+  year      = {1994},
+  pages     = {425--461},
+  publisher = {Motilal Banarsidass},
+  address   = {Delhi},
+  keywords= {seclit}, 
 }
 
 @book{autobioyogi, 
@@ -800,7 +851,6 @@ Sound},
   editor={Mallinson, James},
   title={Yogic Identities: Tradition and Transformation},
   year={2013},
-  date={2024-01-16},
   publisher={Smithonian Institution, Freer Gallery of Art & Arthur M. Sackler Gallery, Smithsonian’s National Museum of Asian Art}, 
   address={Washington D.C.},
   url={https://web.archive.org/web/20240116124707/https://asia-archive.si.edu/essays/yogic-identities/},
@@ -1324,8 +1374,8 @@ keywords={printsource},
 }
 
 @book{penna2004, 
-title{Yogasiddhāntacandrikā of Nārāyaṇatīrtha [A Study]}, 
-author{Penna, Madhusudan}, 
+title={Yogasiddhāntacandrikā of Nārāyaṇatīrtha [A Study]}, 
+author={Penna, Madhusudan}, 
 year={2004},
 publisher={Parimal Publications}, 
 address={Delhi}, 
